--- a/app/src/main/res/layout/fragment_my_wishes.xml
+++ b/app/src/main/res/layout/fragment_my_wishes.xml
@@ -6,9 +6,16 @@
              tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment">
 
 	<!-- TODO: Update blank fragment layout -->
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment"/>
+    <ImageView
+        android:id="@+id/fragment_my_wishes_iv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/baclground"/>
+    <TextView
+        android:id="@+id/fragment_my_wishes_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:hint="Life will be  better !"/>
 
 </FrameLayout>
