--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="card_two_background">#000000</color>
     <color name="card_one_background">#FFFFFF</color>
 
+    <color name="mywish_into_public_wish_background">#e62222</color>
 </resources>
