--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,13 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="fragment_my_wishes_tv_size">30dp</dimen>
+    <dimen name="fragment_my_wishes_button">30dp</dimen>
+
     <integer name="card_flip_full_time">500</integer>
     <integer name="card_flip_half_time">250</integer>
+
+    <integer name="my_wishes_button_in_time">900</integer>
+    <integer name="my_wishes_button_out_time">900</integer>
+
 </resources>
