--- a/app/src/main/res/layout/include_time_activity_card_two.xml
+++ b/app/src/main/res/layout/include_time_activity_card_two.xml
@@ -26,7 +26,7 @@
 			android:gravity="center"
 			android:text="你的大学余额剩下XX%"
 			android:textColor="#fff"
-			android:textSize="20sp"/>
+			android:textSize="@dimen/card_head_size"/>
 
 		<View
 			android:layout_width="match_parent"
@@ -37,7 +37,7 @@
 			android:layout_height="wrap_content"
 			android:text="剩下的日子，你大概还可以"
 			android:textColor="#fff"
-			android:textSize="13sp"/>
+			android:textSize="@dimen/card_subhead_size"/>
 	</LinearLayout>
 
 	<FrameLayout
