--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+	<color name="colorPrimary">#3F51B5</color>
+	<color name="colorPrimaryDark">#303F9F</color>
+	<color name="colorAccent">#7AC0BD</color>
 
-    <color name="black_overlay">#66000000</color>
+	<color name="black_overlay">#66000000</color>
 
-    <color name="card_one_background">#bcffffff</color>
+	<color name="card_one_background">#bcffffff</color>
 
+	<color name="activity_time_background_translucent">#66000000</color>
 
-    <color name="card_two_background">#bd000000</color>
-    <color name="card_two_head_text_color">#fff</color>
-    <color name="card_two_subhead_text_color">#dfff</color>
-    <color name="card_two_btn_text_color">#fff</color>
+	<color name="card_two_background">#bd000000</color>
+	<color name="card_two_head_text_color">#fff</color>
+	<color name="card_two_subhead_text_color">#dfff</color>
+	<color name="card_two_btn_text_color">#fff</color>
 
-    <color name="mywish_into_public_wish_background">#e62222</color>
+	<color name="mywish_into_public_wish_background">#e62222</color>
 
 </resources>
