--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
@@ -8,13 +8,23 @@
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
+	android:orientation="vertical"
 	tools:context=".TestActivity">
+	<ImageView
+		android:id="@+id/iv_show"
+		android:layout_width="match_parent"
+		android:layout_height="300dp"/>
 
 	<Button
-		android:id="@+id/btn_test"
+		android:id="@+id/btn_test_1"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
-		android:text="Click"/>
-
-</FrameLayout>
+		android:text="save"/>
+	<Button
+		android:id="@+id/btn_test_2"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="get"/>
+</LinearLayout>
