--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,12 +4,13 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:orientation="vertical"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
-	android:orientation="vertical"
 	tools:context=".TestActivity">
+
 	<ImageView
 		android:id="@+id/iv_show"
 		android:layout_width="match_parent"
@@ -21,10 +22,18 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="save"/>
+
 	<Button
 		android:id="@+id/btn_test_2"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="get"/>
+
+	<Button
+		android:id="@+id/btn_test_3"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="link*"/>
 </LinearLayout>
