--- a/app/src/main/res/layout/fragment_my_wishes_listview_layout.xml
+++ b/app/src/main/res/layout/fragment_my_wishes_listview_layout.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:paddingTop="10dp"
+        android:paddingBottom="30dp"
+        android:paddingLeft="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/fragment_my_wishes_test_content1"
@@ -18,6 +22,7 @@
             android:layout_gravity="right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000"
             android:text="2011-9-10"/>
     </LinearLayout>
 
