--- a/app/src/main/res/layout/include_time_activity_card_two.xml
+++ b/app/src/main/res/layout/include_time_activity_card_two.xml
@@ -18,17 +18,17 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
-		android:layout_weight="1"
 		android:layout_marginLeft="@dimen/card_margin"
 		android:layout_marginRight="@dimen/card_margin"
+		android:layout_weight="1"
 		android:orientation="vertical">
 
 		<TextView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:gravity="center"
-			android:textColor="@color/card_two_head_text_color"
 			android:text="@string/card_two_head"
+			android:textColor="@color/card_two_head_text_color"
 			android:textSize="@dimen/card_head_size"/>
 
 		<View
@@ -36,12 +36,48 @@
 			android:layout_height="20dp"/>
 
 		<TextView
-			android:paddingLeft="@dimen/card_subhead_padding_left"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
 			android:text="@string/card_two_subhead"
 			android:textColor="@color/card_two_subhead_text_color"
 			android:textSize="@dimen/card_subhead_size"/>
+
+		<TextView
+			android:paddingTop="4dp"
+			android:paddingBottom="4dp"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:text="在教室"
+			android:textColor="@color/card_text_color"/>
+
+		<TextView
+			android:paddingTop="4dp"
+			android:paddingBottom="4dp"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:text="在食堂"
+			android:textColor="@color/card_text_color"/>
+
+		<TextView
+			android:paddingTop="4dp"
+			android:paddingBottom="4dp"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:text="在操场"
+			android:textColor="@color/card_text_color"/>
+
+		<TextView
+			android:paddingTop="4dp"
+			android:paddingBottom="4dp"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:text="在教室"
+			android:textColor="@color/card_text_color"/>
 	</LinearLayout>
 
 	<FrameLayout
@@ -53,10 +89,10 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
-			android:gravity="center"
-			android:textColor="@color/card_two_btn_text_color"
-			android:textSize="@dimen/card_btn_text_size"
 			android:background="@android:color/transparent"
-			android:text="@string/card_two_btn"/>
+			android:gravity="center"
+			android:text="@string/card_two_btn"
+			android:textColor="@color/card_two_btn_text_color"
+			android:textSize="@dimen/card_btn_text_size"/>
 	</FrameLayout>
 </LinearLayout>
