--- a/app/src/main/res/layout/fragment_my_wishes.xml
+++ b/app/src/main/res/layout/fragment_my_wishes.xml
@@ -1,16 +1,33 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="#FFF"
-             tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment"
-             android:clickable="true">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FFF"
+    tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment"
+    android:clickable="true">
 
 	<!-- TODO: Update blank fragment layout -->
-<ListView
-    android:id="@+id/fragment_my_wishes_listview"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:dividerHeight="10dp"
-    android:divider="#c4c4c4"></ListView>
-</FrameLayout>
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_my_wishes"
+            android:layout_width="match_parent"
+            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
+            android:layout_height="?actionBarSize"
+            app:subtitleTextColor="@color/toolbar_text_color"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:subtitle="@string/menu_time_wish"/>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_my_wishes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    </android.support.v7.widget.RecyclerView>
+</android.support.design.widget.CoordinatorLayout>
