--- a/app/src/main/res/layout/fragment_other_wishes.xml
+++ b/app/src/main/res/layout/fragment_other_wishes.xml
@@ -1,13 +1,24 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.iec.dwx.timer.Fragments.OtherWishesFragment">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	tools:context="com.iec.dwx.timer.Fragments.OtherWishesFragment">
 
 	<!-- TODO: Update blank fragment layout -->
-	<TextView
+	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment"/>
+		android:layout_height="wrap_content">
 
-</FrameLayout>
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar_my_wishes"
+			android:layout_width="match_parent"
+			app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
+			android:layout_height="?actionBarSize"
+			app:subtitleTextColor="@color/toolbar_text_color"
+			app:layout_scrollFlags="scroll|enterAlways"
+			app:subtitle="@string/menu_time_other_wishes"/>
+	</android.support.design.widget.AppBarLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
