--- a/app/src/main/res/layout/fragment_other_wishes.xml
+++ b/app/src/main/res/layout/fragment_other_wishes.xml
@@ -1,7 +1,9 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:background="#FFF"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	tools:context="com.iec.dwx.timer.Fragments.OtherWishesFragment">
 
@@ -20,5 +22,13 @@
 			app:subtitle="@string/menu_time_other_wishes"/>
 	</android.support.design.widget.AppBarLayout>
 
+
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/rv_others_wishes"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+	</android.support.v7.widget.RecyclerView>
 
 </android.support.design.widget.CoordinatorLayout>
