--- a/app/src/main/res/layout/fragment_my_wishes.xml
+++ b/app/src/main/res/layout/fragment_my_wishes.xml
@@ -1,12 +1,12 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFF"
     tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment"
-    >
+    android:clickable="true">
 
 	<!-- TODO: Update blank fragment layout -->
     <android.support.design.widget.AppBarLayout
@@ -27,6 +27,7 @@
         android:id="@+id/rv_my_wishes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
     </android.support.v7.widget.RecyclerView>
 </android.support.design.widget.CoordinatorLayout>
