--- a/app/src/main/res/layout/my_wishes_item.xml
+++ b/app/src/main/res/layout/my_wishes_item.xml
@@ -13,16 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="aaaaa"
-        android:textColor="#FFF"/>
+        android:textColor="#000"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:paddingLeft="10dp"
             android:id="@+id/my_wishes_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFF"
+            android:textColor="#000"
             android:hint="2011"/>
     </LinearLayout>
 
