--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
+		<item name="android:listDivider">@drawable/divider_backgroud</item>
 	</style>
 
 	<style name="FullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
