--- a/app/src/main/res/drawable/divider_backgroud.xml
+++ b/app/src/main/res/drawable/divider_backgroud.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-
-    <solid
-        android:color="#13646363"
-        ></solid>
-    <size android:height="10dp"/>
+    <stroke
+        android:width="2dp"
+        android:color="#e21616"
+        android:dashWidth="4dp"
+        android:dashGap="10dp"
+        />
+    <size android:height="4dp"/>
 </shape>
