--- a/app/src/main/res/drawable/divider_backgroud.xml
+++ b/app/src/main/res/drawable/divider_backgroud.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="line" >
     <stroke
-        android:width="2dp"
-        android:color="#e21616"
+        android:dashGap="4dp"
+        android:color="#000"
+        android:width="6dp"
         android:dashWidth="4dp"
-        android:dashGap="10dp"
-        />
+        ></stroke>
     <size android:height="4dp"/>
 </shape>
