--- a/app/src/main/res/layout/activity_other_wishes.xml
+++ b/app/src/main/res/layout/activity_other_wishes.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,35 +9,26 @@
     tools:context="com.iec.dwx.timer.Fragments.MyWishesFragment"
     android:clickable="true">
 
-	<!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank fragment layout -->
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_my_wishes"
+            android:id="@+id/toolbar_other_wishes"
             android:layout_width="match_parent"
             app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
             android:layout_height="?actionBarSize"
             app:subtitleTextColor="@color/toolbar_text_color"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:subtitle="@string/menu_time_wish"/>
+            app:subtitle="云端心愿"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_my_wishes"
+        android:id="@+id/rv_other_wishes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v7.widget.RecyclerView>
-    <include
-        android:id="@+id/add_view"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        layout="@layout/fragment_my_wishes_add_view"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        ></include>
 </android.support.design.widget.CoordinatorLayout>
