--- a/app/src/main/res/layout/detail_textview.xml
+++ b/app/src/main/res/layout/detail_textview.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="here is nothing"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:hint="11111"/>
 
 </LinearLayout>
