--- a/app/src/main/res/menu/menu_my_wishes.xml
+++ b/app/src/main/res/menu/menu_my_wishes.xml
@@ -4,6 +4,12 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
 	<item
+		android:id="@+id/menu_my_wishes_add"
+		android:icon="@drawable/ic_add_grey_900_24dp"
+		android:title=""
+		app:showAsAction="always"
+		></item>
+	<item
 		android:id="@+id/menu_my_wishes_share"
 		android:icon="@drawable/ic_wb_cloudy_black_24dp"
 		android:title=""
