--- a/app/src/main/res/menu/menu_achievement.xml
+++ b/app/src/main/res/menu/menu_achievement.xml
@@ -4,8 +4,15 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
 	<item
-		android:id="@+id/menu_achievement_add"
+		android:id="@+id/menu_achievement_play"
 		android:icon="@drawable/ic_play_arrow_black_24dp"
+		android:title=""
+		app:showAsAction="ifRoom"
+		>
+	</item>
+	<item
+		android:id="@+id/menu_achievement_add"
+		android:icon="@drawable/ic_add_black_24dp"
 		android:title=""
 		app:showAsAction="always"
 		>
