--- a/app/src/main/res/layout/activity_my_wishes_detail.xml
+++ b/app/src/main/res/layout/activity_my_wishes_detail.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_my_wishes"
+            android:id="@+id/toolbar_my_wishes_details"
             android:layout_width="match_parent"
             app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
             android:layout_height="?actionBarSize"
@@ -22,36 +22,11 @@
             app:subtitle="我的心愿详情"/>
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:orientation="vertical">
     <android.support.v4.view.ViewPager
         android:id="@+id/detail_viewPager"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_weight="0.9"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/detail_share_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:text="分享"/>
-        <Button
-            android:id="@+id/detail_delete_btn"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:layout_height="match_parent"
-            android:text="删除"/>
-    </LinearLayout>
-    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
