--- a/app/src/main/res/layout/detail_textview.xml
+++ b/app/src/main/res/layout/detail_textview.xml
@@ -5,6 +5,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:hint="11111"/>
+        android:text="11111"/>
 
 </LinearLayout>
