--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -6,6 +6,7 @@
 	>
 
 	<com.iec.dwx.timer.Views.SquareImageView
+		android:layout_margin="2dp"
 		android:id="@+id/iv_photo"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
