--- a/app/src/main/res/layout/activity_edit_achievement.xml
+++ b/app/src/main/res/layout/activity_edit_achievement.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+	android:id="@+id/edit_achievement_container"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -22,28 +23,34 @@
 			app:subtitleTextColor="@color/toolbar_text_color"/>
 	</android.support.design.widget.AppBarLayout>
 
-	<android.support.v7.widget.CardView
+
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="200dp"
+		android:layout_height="wrap_content"
 		android:layout_margin="8dp"
-		>
+		android:background="#fff"
+		android:gravity="center"
+		android:orientation="horizontal">
 
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:orientation="vertical">
+		<com.iec.dwx.timer.Views.SquareImageView
+			android:id="@+id/iv_pick_photo"
+			android:scaleType="centerCrop"
+			android:layout_width="100dp"
+			android:layout_height="100dp"
+			android:src="@drawable/ic_add_photo"/>
 
-			<EditText
-				android:hint="写下你的成就"
-				android:layout_width="match_parent"
-				android:layout_height="0dp"
-				android:layout_weight="1"
-			    android:background="#ffff"
-				/>
+		<EditText
+			android:id="@+id/et_write_achievement"
+			android:layout_width="0dp"
+			android:layout_height="150dp"
+			android:layout_weight="1"
+			android:background="#ffff"
+			android:focusable="true"
+			android:gravity="top"
+			android:hint="@string/achievement_edit_hint"
+			android:paddingLeft="16dp"
+			android:paddingTop="24dp"
+			/>
 
-			<com.iec.dwx.timer.Views.SquareImageView
-				android:layout_width="100dp"
-				android:layout_height="100dp"/>
-		</LinearLayout>
-	</android.support.v7.widget.CardView>
+	</LinearLayout>
 </LinearLayout>
