--- a/app/src/main/res/layout/detail_textview.xml
+++ b/app/src/main/res/layout/detail_textview.xml
@@ -3,17 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/my_wishes_details_content_textview"
+    <EditText
+        android:id="@+id/my_wishes_details_content_editView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="30dp"
         android:paddingTop="10dp"
-        android:textSize="30dp"
+        android:background="#FFF"
+        android:textSize="20dp"
         android:textColor="#000"
-        android:hint="aaaaa"
        />
     <LinearLayout
         android:layout_width="match_parent"
