--- a/app/src/main/res/layout/my_wishes_item.xml
+++ b/app/src/main/res/layout/my_wishes_item.xml
@@ -4,25 +4,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="30dp"
-        android:paddingTop="10dp"
-        android:textSize="30dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:maxLines="1"
+        android:textSize="24dp"
         android:id="@+id/my_wishes_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000"/>
+        android:textColor="#bd000000"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:paddingLeft="10dp"
+            android:paddingLeft="20dp"
             android:id="@+id/my_wishes_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"/>
+            android:textColor="#bd000000"/>
     </LinearLayout>
 
 </LinearLayout>
