--- a/app/src/main/res/layout/fragment_my_skill_add_view.xml
+++ b/app/src/main/res/layout/fragment_my_skill_add_view.xml
@@ -7,13 +7,13 @@
     android:paddingBottom="16dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/fragment_my_wishes_add_view_style"
+    android:background="@drawable/fragment_my_skill_add_view_style"
     android:orientation="vertical">
     <EditText
-        android:id="@+id/my_wishes_add_editText"
+        android:id="@+id/my_skill_add_editText"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:hint="@string/my_wishes_edit_hint"
+        android:hint="新技能不超过15个字"
         android:gravity="left"
         android:background="#FFF"/>
     <LinearLayout
@@ -23,18 +23,18 @@
         android:orientation="horizontal">
         <Button
             android:background="@android:color/transparent"
-            android:id="@+id/my_wishes_add_btn_cencel"
+            android:id="@+id/my_skill_add_btn_cencel"
             android:layout_width="124dp"
             android:layout_height="36dp"
             android:textColor="@color/common_black"
             android:text="@string/my_wish_add_view_cancel_btn"/>
         <Button
             android:background="@android:color/transparent"
-            android:id="@+id/my_wishes_add_btn_sure"
+            android:id="@+id/my_skill_add_btn_sure"
             android:layout_width="124dp"
             android:layout_height="36dp"
             android:textColor="@color/common_black"
             android:text="@string/my_wish_add_view_sure_btn"/>
-      </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
