--- a/app/src/main/res/layout/include_time_activity_card_one.xml
+++ b/app/src/main/res/layout/include_time_activity_card_one.xml
@@ -24,6 +24,7 @@
 		android:orientation="vertical">
 
 		<TextView
+			android:id="@+id/tv_card_one_head"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:gravity="center"
@@ -40,6 +41,50 @@
 			android:paddingLeft="@dimen/card_subhead_padding_left"
 			android:text="@string/card_one_subhead"
 			android:textSize="@dimen/card_subhead_size"/>
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="20dp"/>
+
+		<TextView
+			android:id="@+id/tv_card_one_cell_1"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingBottom="4dp"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:paddingTop="4dp"
+			android:text="* %s"
+			/>
+
+		<TextView
+			android:id="@+id/tv_card_one_cell_2"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingBottom="4dp"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:paddingTop="4dp"
+			android:text="* %s"
+			/>
+
+		<TextView
+			android:id="@+id/tv_card_one_cell_3"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingBottom="4dp"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:paddingTop="4dp"
+			android:text="* %s"
+			/>
+
+		<TextView
+			android:id="@+id/tv_card_one_cell_4"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingBottom="4dp"
+			android:paddingLeft="@dimen/card_subhead_padding_left"
+			android:paddingTop="4dp"
+			android:text="* %s"
+			/>
 	</LinearLayout>
 
 	<FrameLayout
